[package]
name = "build-commnads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
#box-drawing = { path = "../" }
rustpython-parser = "0.1"
pyo3 = { version = "0.16", features = ["auto-initialize"] }
